# tinysmtp

./: .clang-format  .gitignore  Dockerfile  LICENSE  README.md  message.h  transport.c  transport.h  west.yml
.devcontainer/: devcontainer.json
include/tinysmtp/: address.h  credentials.h  message.h  transport.h  user_credentials_test.h
include/tinysmtp/linux/: sockets.h
include/tinysmtp/zephyr/: sockets.h
linux/: sockets.c  sockets.h
src/: transport.c
src/linux/: sockets.c
src/zephyr/: sockets.c
test/: Makefile
test/linux/: CMakeLists.txt  main.c
test/zephyr/: CMakeLists.txt  main.c  prj.conf
zephyr/: sockets.c  sockets.h
